# ann-stability-theory

./: Makefile  README.md  algorithmic_stability.py  pyproject.toml
filtered/: estimate_pmax.py  filtered_stability.py
multi-vector/: colbert_stability.py  synthetic_stability.py  theorem_validation.py
sparse/: compute_splade_embeddings.py  sparse_stability.py  synthetics.py
